// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept fill prop 1`] = `
.emotion-0 {
  fill: #D83A2E;
  font-size: 1.5rem;
}

<svg
  aria-hidden="true"
  class="emotion-0"
  height="1em"
  role="img"
  viewBox="0 0 24 24"
  width="1em"
>
  <g
    data-name="bell"
  >
    <path
      d="M18 16v-6a6 6 0 0 0-4-5.62V4a2 2 0 0 0-4 0v.36A6 6 0 0 0 6 10v6l-2 1v1h16v-1zm-2 0H8v-6a4 4 0 0 1 8 0zM10 20a2 2 0 0 0 4 0"
    />
  </g>
</svg>
`;

exports[`should accept size prop 1`] = `
.emotion-0 {
  fill: currentColor;
  font-size: 3rem;
}

<svg
  aria-hidden="true"
  class="emotion-0"
  height="1em"
  role="img"
  viewBox="0 0 24 24"
  width="1em"
>
  <g
    data-name="bell"
  >
    <path
      d="M18 16v-6a6 6 0 0 0-4-5.62V4a2 2 0 0 0-4 0v.36A6 6 0 0 0 6 10v6l-2 1v1h16v-1zm-2 0H8v-6a4 4 0 0 1 8 0zM10 20a2 2 0 0 0 4 0"
    />
  </g>
</svg>
`;

exports[`should accept stroke prop 1`] = `
.emotion-0 {
  fill: currentColor;
  stroke: #BF4600;
  font-size: 1.5rem;
}

<svg
  aria-hidden="true"
  class="emotion-0"
  height="1em"
  role="img"
  viewBox="0 0 24 24"
  width="1em"
>
  <g
    data-name="bell"
  >
    <path
      d="M18 16v-6a6 6 0 0 0-4-5.62V4a2 2 0 0 0-4 0v.36A6 6 0 0 0 6 10v6l-2 1v1h16v-1zm-2 0H8v-6a4 4 0 0 1 8 0zM10 20a2 2 0 0 0 4 0"
    />
  </g>
</svg>
`;

exports[`should accept style prop 1`] = `
.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
  stroke-width: 5;
}

<svg
  aria-hidden="true"
  class="emotion-0"
  height="1em"
  role="img"
  viewBox="0 0 24 24"
  width="1em"
>
  <g
    data-name="bell"
  >
    <path
      d="M18 16v-6a6 6 0 0 0-4-5.62V4a2 2 0 0 0-4 0v.36A6 6 0 0 0 6 10v6l-2 1v1h16v-1zm-2 0H8v-6a4 4 0 0 1 8 0zM10 20a2 2 0 0 0 4 0"
    />
  </g>
</svg>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

<svg
  aria-hidden="true"
  class="emotion-0"
  height="1em"
  role="img"
  viewBox="0 0 24 24"
  width="1em"
>
  <g
    data-name="pen"
  >
    <path
      d="M4 17.18L4.01 20h2.83L18.01 8.83 15.18 6 4 17.18zM19.72 5.61l-1.33-1.33a.94.94 0 0 0-1.33 0L16 5.33 18.67 8l1-1.06a.94.94 0 0 0 .05-1.33z"
    />
  </g>
</svg>
`;
